--- a/installation/manifests/product/100-hyperfoil.yaml
+++ b/installation/manifests/product/100-hyperfoil.yaml
@@ -1,16 +1,1 @@
-apiVersion: v1
-kind: Namespace
-metadata:
-  name: hyperfoil
----
-apiVersion: hyperfoil.io/v1alpha2
-kind: Hyperfoil
-metadata:
-  name: hyperfoil-cluster
-  namespace: hyperfoil
-spec:
-  image: quay.io/hyperfoil/hyperfoil:0.20-SNAPSHOT
-  route:
-    host: ${HYPERFOIL_SERVER_URL}
-  agentDeployTimeout: 120000
-  version: latest
+../nightly/100-hyperfoil.yaml
