--- a/installation/manifests/product/000-subscription-hyperfoil.yaml
+++ b/installation/manifests/product/000-subscription-hyperfoil.yaml
@@ -1,10 +1,1 @@
-apiVersion: operators.coreos.com/v1alpha1
-kind: Subscription
-metadata:
-  name: hyperfoil-bundle
-  namespace: openshift-operators
-spec:
-  channel: alpha
-  name: hyperfoil-bundle
-  source: community-operators
-  sourceNamespace: openshift-marketplace
+../nightly/000-subscription-hyperfoil.yaml
