--- a/installation/patches/kafka-broker-dispatcher.yaml
+++ b/installation/patches/kafka-broker-dispatcher.yaml
@@ -4,6 +4,8 @@ spec:
       containers:
         - name: kafka-broker-dispatcher
           resources:
+            limits:
+              memory: "6Gi"
             requests:
-              memory: "1Gi"
+              memory: "4Gi"
               cpu: "1"
